--- a/css/styles.css
+++ b/css/styles.css
@@ -14,5 +14,14 @@
 }
 
 .info{
-    border-bottom: 2px solid red;
+    border: 2px solid blue;
+    width: 37%;
+    margin: 10px;
+    padding: 12px;
+    padding-right: 20px;
+
+}
+h1{
+    font-style: italic;
+    
 }
