--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 }
 
 .info{
-    border: 2px solid blue;
+    border: 4px solid blue;
     width: 37%;
     margin: 10px;
     padding: 9px;
@@ -24,4 +24,11 @@
 h1{
     font-style: italic;
     
+}
+
+.projects{
+    border: 8px solid black;
+    width: 25%;
+    margin: 30px;
+    padding: 10px;
 }
