Fix the responsive features

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 480px) and (max-width: 767px) {
     body{
-        background-color: black;
+        background-color: rgb(226, 17, 17);
         color: white;
     }
     
